# dify

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: basic.yml  ci.yml  docker.yml  quality_assurance.yml  release_and_upload.yml  release_new_version.yml
benches/: README.md  benchmark.rs
examples/: distance.rs
src/: cli.rs  constant.rs  diff.rs  lib.rs  main.rs  yiq.rs
tests/: e2e.rs
