[package]
name = "dify"
version = "0.3.6-alpha.0"
description = "A fast pixel-by-pixel image comparison tool in Rust"
homepage = "https://github.com/jihchi/dify"
documentation = "https://docs.rs/dify"
repository = "https://github.com/jihchi/dify.git"
readme = "README.md"
authors = ["jihchi <achi@987.tw>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.release]
pre-release-commit-message = "Bump version to {{version}}"

### BEGIN
# Fix an issuer where `cargo bench -- --save-baseline` does not work.
# For more details, please see: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "dify"
path = "src/main.rs"
bench = false

[lib]
bench = false
### END

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.3"
assert_cmd = "1.0.2"
assert_fs = "1.0.0"
predicates = "1.0.6"

[dependencies]
image = "0.23.12"
getopts = "0.2"
anyhow = "1.0"
colored = "2.0.0"
rayon = "1.5.0"
