[package]
name = "dify"
authors = ["Jihchi Lee <achi@987.tw>"]
version = "0.3.6-alpha.0"
description = "A fast pixel-by-pixel image comparison tool in Rust"
homepage = "https://github.com/jihchi/dify"
documentation = "https://docs.rs/dify"
repository = "https://github.com/jihchi/dify.git"
readme = "README.md"
license-file = "LICENSE.md"
edition = "2018"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE.md",
]

[package.metadata.release]
pre-release-commit-message = "Bump version to {{version}}"

### BEGIN
# Fix an issue where `cargo bench -- --save-baseline` does not work.
# For more details, please see https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[[bin]]
name = "dify"
path = "src/main.rs"
bench = false

[lib]
bench = false
### END

[[bench]]
name = "benchmark"
path = "./benches/benchmark.rs"
harness = false

[dev-dependencies]
criterion = "0.3.4"
assert_cmd = "1.0.3"
assert_fs = "1.0.1"
predicates = "1.0.7"

[dependencies]
image = "0.23.14"
getopts = "0.2.21"
anyhow = "1.0.40"
colored = "2.0.0"
rayon = "1.5.0"
